// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar render correctly according to props 1`] = `
<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={72}
  className="css-1d7xzb9"
  role="progressbar"
/>
`;

exports[`ProgressBar render correctly according to props 2`] = `
<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={50}
  className="css-1y7tdla"
  role="progressbar"
/>
`;
